# odoo-knowledge-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
benchmarks/accuracy/: mcp_accuracy_cases.json
config/: development.toml  production.toml  smoke.toml
crates/odoo-knowledge-cli/: Cargo.toml
crates/odoo-knowledge-cli/src/: main.rs
crates/odoo-knowledge-cli/src/commands/: mod.rs
crates/odoo-knowledge-cli/tests/: cli_smoke.rs  mcp_smoke.rs
crates/odoo-knowledge-core/: Cargo.toml
crates/odoo-knowledge-core/src/: config.rs  error.rs  lib.rs
crates/odoo-knowledge-core/src/codebase/: git.rs  mod.rs  registry.rs  release.rs
crates/odoo-knowledge-core/src/graph/: mod.rs
crates/odoo-knowledge-core/src/indexer/: dedupe.rs  diagnostics.rs  mod.rs  pipeline.rs  profiles.rs
crates/odoo-knowledge-core/src/parsers/: csv_access.rs  javascript.rs  manifest.rs  mod.rs  python.rs  xml.rs
crates/odoo-knowledge-core/src/scanner/: classify.rs  file_scan.rs  manifest_scan.rs  mod.rs
crates/odoo-knowledge-core/src/search/: mod.rs
crates/odoo-knowledge-core/src/services/: mod.rs
crates/odoo-knowledge-core/src/storage/: mod.rs  schema.rs  sqlite.rs
crates/odoo-knowledge-core/src/storage/repositories/: codebases.rs  mod.rs
crates/odoo-knowledge-core/src/tools/: mod.rs
crates/odoo-knowledge-core/tests/: index_mini_addon.rs
crates/odoo-knowledge-server/: Cargo.toml
crates/odoo-knowledge-server/src/: auth.rs  health.rs  http.rs  main.rs  mcp.rs
docs/: INDEX.md  adaptive-parser-roadmap.md  benchmarking.md  cross-version-benchmarking.md  index-correctness-notes.md  install-upgrade.md  latest-index-maintenance.md  mcp-performance-accuracy-tasklist.md  mcp-prompts-reference.md  mcp-rs-complete-technical-documentation.md  mcp-tools-reference.md  migrations.md  new-version-onboarding.md  operations-runbook.md  production-readiness-checklist.md  production-rollout-results.md  rust-python-parity.md  rust-rebuild-plan.md  security-review-checklist.md
examples/: Caddyfile  codex-config.toml  nginx-odoo-knowledge-rs.conf  odoo-knowledge-rs.service
migrations/: 0001_initial.sql  0002_fts.sql  0003_lookup_indexes.sql  0004_hot_path_order_indexes.sql  0005_materialized_context_cache.sql
scripts/: audit_sqlite_query_plans.py  benchmark_mcp_concurrent.py  benchmark_python_vs_rust.py  evaluate_mcp_accuracy.py  export_index_inventory.py  onboard_codebase.py  update_indexed_codebase.py
(+7 files in other folders)
