[package]
name = "odoo-knowledge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "odoo-knowledge"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
odoo-knowledge-core = { path = "../odoo-knowledge-core" }
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
