[package]
name = "odoo-knowledge-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
csv.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"
walkdir.workspace = true
