[package]
name = "odoo-knowledge-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "odoo-knowledge-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
odoo-knowledge-core = { path = "../odoo-knowledge-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

